# The-Planning-Bord

./: .env.example  .gitignore  ANALYSIS_REPORT_2026.md  CHANGELOG.md  CONTRIBUTING.md  DESKTOP_SETUP.md  Database schema.md  EULA.md  GETTING_STARTED.md  LICENSE  PRICING.md  PRODUCTION_BUILD_GUIDE.md  README.md  REDIS_QUEUE_IMPLEMENTATION.md  SECURITY.md  SOURCE_DETAIL.md  TECHNICAL_STACK.md  TEST_LICENSE.txt  UI wireframe.md  additional fetures.md  build-desktop-secure.js  build-desktop.ps1  build_all.bat  bundle-postgres.ps1  commitlint.config.js  docker-compose.redis.yml  ecosystem.config.js  instruction  instructions.md  market report.md  move-config-files.ps1  openapi.yaml  package-lock.json  package.json  project report.md  setup-desktop-safe.ps1  setup-desktop.ps1  setup-package.json  start-desktop.ps1  tailwind.config.js
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: Dockerfile  (+16 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/postgres/: 001_initial_schema.sql  002_supply_chain.sql  003_business_type_configuration.sql  004_erp_standardization.sql  005_item_categorization.sql  005_seed_gl_accounts.sql  006_sales_orders.sql  008_migrate_projects_client_id.sql  008_sales_order_lines_service_support.sql  009_project_profitability_schema.sql  011_link_tools_to_products.sql
src-tauri/src/: db.rs  email.rs  lib.rs  main.rs  models.rs
src-tauri/src/db/: config.rs  memory.rs  mod.rs  noop.rs  postgres.rs  postgres_init.rs
src-tauri/src/setup/: embedded.rs  local.rs  mod.rs
src-tauri/tests/: auth_tests.rs  db_tests.rs
(+241 files in other folders)
