[package]
name = "the-planning-bord"
version = "0.1.0"
description = "The Planning Bord is a comprehensive, enterprise-grade ERP (Enterprise Resource Planning) desktop application designed for modern businesses."
authors = ["Rijan Mainali"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "the_planning_bord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
dotenv = "0.15"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }
jsonwebtoken = "9"
tokio = { version = "1.49.0", features = ["full"] }
deadpool-postgres = "0.14.1"
async-trait = "0.1.89"
csv = "1.3"
lettre = "0.11.19"

[profile.dev]
debug = 0  # Reduce debug info to avoid PDB errors (LNK1318)
split-debuginfo = "unpacked" # Improve link times and avoid giant PDBs on Windows
